[build-system]
requires = ['setuptools>=42', 'numpy', 'torch', 'torchvision', 'numba', 'nltk', 'pandas', 'json5', 'PyYAML', 'torchtext',
    'torchaudio', 'moviepy']
build-backend = 'setuptools.build_meta'



[project]
name = "erutils"
version = "0.6.1"
description = '''
          Erutils Package is a self made package for self uses but if you find a way to use it to make you job easier feel free to use as you wish
          but for a simple introduction erutils have 4 fls and those are
           [cli , dll , lightning(AI) , utils, nlp]
           *cli* is used for command line interface
           *dll* for dll file problems cause i ran into a lot of em
           *lightning* some classes and functions that i think that i always use like iou kmeans and many more ...
           *utils* some functions like downloader timeSince and some more ...

          '''
readme = "README.md"
authors = [{ name = "Erfan zare Chavoshi ", email = "erfanzare82@yahoo.com" }]

dependencies = [
    "feedparser >= 5.2.0",
    "html2text", "opencv-python~=4.6.0.66",
    "keyboard~=0.13.5",
    "numpy~=1.23.4",
    "pefile~=2022.5.30",
    "requests~=2.28.1",
    "yaml~=0.2.5",
    "pyyaml~=6.0",
    "numba~=0.56.4",
    "scikit-learn~=1.1.3",
    " torch~=2.0.0",
    "setuptools~=65.5.0",
    " moviepy~=1.0.3",
    "imageio==2.23.0",
    " toml~=0.10.2",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/erfanzar/Erutils"

[project.scripts]
realpython = "erutils.__main__:main"